# rust_rest_api

./: Cargo.toml  README.md  rustfmt.toml
database/: tables.sql
src/: bcrypt.rs  db.rs  dberror.rs  log.rs  main.rs  repository.rs  tools.rs
src/api/: apps.rs  example.rs  mod.rs  user.rs
src/jwt/: claims.rs  jwt.rs
src/repositories/: apps_repo.rs  mod.rs  user_repo.rs
src/requests/: create_app_request.rs  login_request.rs  mod.rs  register_request.rs
src/tables/: apps.rs  mod.rs  user.rs
src/user/: user.rs
