[package]
name = "rest_api_first"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
deadpool-postgres = { version = "0.14.1" }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
dotenv = "0.15"
actix-rt = "2"
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1.88"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.17.0"