[package]
name = "rest_api_first"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
deadpool-postgres = { version = "0.14.1" }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1"] }
dotenv = "0.15"
actix-rt = "2"
actix-web = "4"
actix-multipart = "0.7.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.143"
async-trait = "0.1.89"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde", "clock"] }
bcrypt = "0.17.1"
uuid = { version = "1.18", features = ["v4", "serde"] }
mime_guess = "2"
futures-util = "0.3"